--- a/Project/Client/Views/User/UserDashboard.cshtml
+++ b/Project/Client/Views/User/UserDashboard.cshtml
@@ -138,7 +138,7 @@
                     }
                         <div class="project-info">
                             <strong class="d-inline-block text-truncate" style="max-width: 150px;">@product.Name</strong>
-                            <div><small style="min-width: 150px"><a asp-controller="User" asp-action="EditProduct" asp-route-id="">Edit</a> | <a href="">Analytics</a> | <a href="">Widget</a> | <a href="">More</a></small></div>
+                            <div><small style="min-width: 150px"><a asp-controller="User" asp-action="EditProduct" asp-route-id="@product.Id">Edit</a> | <a href="">Analytics</a> | <a href="">Widget</a> | <a href="">More</a></small></div>
                         </div>
                         <span class="badge bg-secondary">DRAFT</span>
                 }
