--- a/Project/Client/Views/Admin/CategoriesManager.cshtml
+++ b/Project/Client/Views/Admin/CategoriesManager.cshtml
@@ -108,14 +108,14 @@
 <!-- Thông báo -->
 @* @if (!string.IsNullOrEmpty(notification))
 { *@
-<div class="alert alert-success">
-	@* @notification *@
+@* <div class="alert alert-success">
+	
 	Bạn đã thành công vào Admin Category
 </div>
 <div class="alert alert-danger">
-	@* @notification *@
+	
 	Bạn đã thành công vào Admin Category
-</div>
+</div> *@
 @* } *@
 
 <div class="container mt-4">
