--- a/Project/Client/Views/Product/Collection.cshtml
+++ b/Project/Client/Views/Product/Collection.cshtml
@@ -97,7 +97,7 @@
                 <div class="collection-card">
                     <img src="@image.ImageUrl" alt="Favorites">
                     <div class="text">
-                        <p class="title text-danger">@image.ProductName</p>
+                        <p class="title text-white">@image.ProductName</p>
                     </div>
                 </div>
 
